SCAL-213939 Update document view styles to prevent overflow

--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -28,6 +28,7 @@ body {
     padding: $gutter;
     font-family: 'Optimo-Plain';
     font-size: $font-size-normal;
+    overflow-y: hidden;
     animation: display-transition 1s ease-out;
 }
 
